--- a/server/package.json
+++ b/server/package.json
@@ -13,11 +13,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongodb": "^5.1.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/mongodb": "^4.0.7",
     "@types/node": "^18.15.11",
     "cors": "^2.8.5",
     "nodemon": "^2.0.22",
