--- a/server/package.json
+++ b/server/package.json
@@ -20,8 +20,10 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/mongodb": "^4.0.7",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.15.11",
     "cors": "^2.8.5",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.3"
