--- a/server/package.json
+++ b/server/package.json
@@ -17,11 +17,13 @@
     "mongodb": "^5.1.0"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/mongodb": "^4.0.7",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.15.11",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
